syntax = "proto3";

package confluent.kafka.examples.protobufMultipleTypesPerTopic;

message SomethingEnded {
    string Id = 1;
    string EndMessage = 2;
    string EndDate = 3;
}
