syntax = "proto3";

package confluent.kafka.examples.protobufMultipleTypesPerTopic;

message SomethingStarted {
	string Id = 1;
    string StartMessage = 2;
    string StartDate = 3;
}
